--- a/presigned-url-example/presigned-url-example/Base.lproj/Main.storyboard
+++ b/presigned-url-example/presigned-url-example/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -22,26 +22,33 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dTA-jr-gpJ">
-                                <rect key="frame" x="16" y="280" width="343" height="30"/>
-                                <color key="backgroundColor" red="0.51479914186567877" green="0.69616398346572661" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dTA-jr-gpJ">
+                                <rect key="frame" x="16" y="629" width="343" height="30"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="nXp-l1-dx2"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
-                                <state key="normal" title="Select image">
-                                    <color key="titleColor" red="1" green="0.0" blue="0.029831843470767616" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                </state>
+                                <state key="normal" title="Select image"/>
                                 <connections>
                                     <action selector="buttonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sfx-VJ-86b"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wHI-GS-Ri8">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="591"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wHI-GS-Ri8">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="621"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="dTA-jr-gpJ" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="0ES-Y2-88v"/>
+                            <constraint firstAttribute="trailing" secondItem="wHI-GS-Ri8" secondAttribute="trailing" id="Cqk-DJ-pNb"/>
                             <constraint firstItem="dTA-jr-gpJ" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="DKh-kf-gA1"/>
                             <constraint firstItem="dTA-jr-gpJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="N38-lL-gR0"/>
+                            <constraint firstItem="wHI-GS-Ri8" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="O26-o1-Wgt"/>
+                            <constraint firstItem="wHI-GS-Ri8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="YlR-Id-JIY"/>
+                            <constraint firstItem="dTA-jr-gpJ" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="ZaP-Qa-Nn0"/>
+                            <constraint firstItem="dTA-jr-gpJ" firstAttribute="top" secondItem="wHI-GS-Ri8" secondAttribute="bottom" constant="8" id="aqY-UV-Ej3"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dTA-jr-gpJ" secondAttribute="bottom" constant="8" id="hyP-Fb-Sgi"/>
                         </constraints>
                     </view>
                     <connections>
